--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,9 @@
   box-sizing: border-box;
 }
 
+.margin-mobile{
+  margin-top: 1rem !important;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   :root {
