--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,10 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+.bg-white{
+  background-color: #fff;
+}
+
 hr {
   margin: 1rem 0;
   color: inherit;
